[package]
name = "smallchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
